--- a/limits-service/src/main/resources/bootstrap.properties
+++ b/limits-service/src/main/resources/bootstrap.properties
@@ -1,3 +1,6 @@
 spring.application.name=limits-service
 spring.cloud.config.uri=http://localhost:8888
 spring.profiles.active=qa
+management.endpoints.web.exposure.include=*
+management.security.enabled=false
+spring.cloud.bus.enabled=true
